syntax = "proto3";

package com.grpc.chat;

option java_multiple_files = true;
option java_package = "com.grpc.chat";
option java_outer_classname = "chatProto";

// The greeting service definition.
service ChatService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}